test_outputs/connlist/exposure_test_allow_all_connlist_output.txt
0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections

Exposure Analysis Result:
0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment] : All Connections
entire-cluster => hello-world/workload-a[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] => entire-cluster : All Connections
